--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build rockslide
+name: Build container-registry
 run-name: Build triggered by ${{ github.actor }}
 on:
   - pull_request
@@ -12,7 +12,3 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-23.11
       - run: nix-build .
-      - uses: actions/upload-artifact@v4
-        with:
-          name: rockslide
-          path: result/bin/rockslide
