--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "rockslide"
-version = "0.2.0"
+name = "container-registry"
+authors = [ "Marc Brinkmann <git@marcbrinkmann.de>" ]
+version = "0.1.0"
 edition = "2021"
 license = "MIT"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.75"
