--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
+anyhow = { version = "1.0.86", optional = true }
 axum = { version = "0.7.5", features = [ "tracing" ] }
 base64 = "0.21.5"
 constant_time_eq = "0.3.0"
@@ -16,22 +17,35 @@ rm = "0.3.2"
 sec = { version = "1.0.0", features = [ "deserialize", "serialize" ] }
 serde = { version = "1.0.193", features = [ "derive" ] }
 serde_json = "1.0.108"
+structopt = { version = "0.3.26", optional = true }
 sha2 = "0.10.8"
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = [
   "fs",
   "io-util",
+  "macros",
   "rt-multi-thread",
 ] }
 tokio-util = { version = "0.7.10", features = [ "io" ] }
+tempdir = { version = "0.3.7", optional = true }
+tower-http = { version = "0.5.2", features = [ "trace" ], optional = true }
 tracing = "0.1.40"
 uuid = { version = "1.6.1", features = [ "v4", "serde" ] }
+tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ], optional = true }
 
 [dev-dependencies]
 http-body-util = "0.1.0"
 tempdir = "0.3.7"
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = [ "trace" ] }
+
+[features]
+default = []
+bin = [ "anyhow", "structopt", "tempdir", "tower-http", "tracing-subscriber" ]
+
+[[bin]]
+name = "container-registry"
+required-features = [ "bin" ]
 
 [profile.release]
 opt-level = "s"
